[gd_scene load_steps=8 format=3 uid="uid://cwxfn51risogs"]

[ext_resource type="Script" path="res://Scripts/Menu.gd" id="1_4ek5o"]
[ext_resource type="Texture2D" uid="uid://bjiinwsq46wn0" path="res://Sprites/logo-no-background.png" id="1_8kufi"]
[ext_resource type="PackedScene" uid="uid://gju0rb3k67eb" path="res://Objects/SceneTransition.tscn" id="2_brpdq"]
[ext_resource type="Texture2D" uid="uid://cdedh5m82i7mk" path="res://Sprites/ChildRoom/Child_scene_1_background.jpg" id="2_nyqjd"]
[ext_resource type="FontFile" uid="uid://dokgkoyhcd7pu" path="res://Fonts/CoopBlack_Cyrillic_0.ttf" id="2_q0b47"]
[ext_resource type="AudioStream" uid="uid://dilc7tpc6ssnx" path="res://Audio/main_theme.mp3" id="3_vk72m"]
[ext_resource type="PackedScene" uid="uid://dljwsjpl84nee" path="res://Scenes/BaseIntro.tscn" id="5_a1ogs"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_4ek5o")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.511188, 0.495868)
texture = ExtResource("2_nyqjd")
stretch_mode = 2

[node name="PlayButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 472.0
offset_top = 296.0
offset_right = 811.0
offset_bottom = 384.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 0.986257)
theme_override_colors/icon_normal_color = Color(1, 1, 1, 1)
theme_override_colors/icon_hover_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_q0b47")
theme_override_font_sizes/font_size = 64
text = " ИГРАТЬ "

[node name="TextureRect2" type="TextureRect" parent="."]
offset_left = 24.0
offset_right = 2584.0
offset_bottom = 1440.0
scale = Vector2(0.081934, 0.135616)
texture = ExtResource("1_8kufi")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_vk72m")
autoplay = true

[node name="SceneTransition" parent="." instance=ExtResource("2_brpdq")]
visible = false
next_scene = ExtResource("5_a1ogs")

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_audio_stream_player_2d_finished"]
